feat: validate user type with generated token
